test/ClangImporter/sdk.code
// RUN: %target-typecheck-verify-language

// REQUIRES: objc_interop

import Foundation

// Codira and Foundation types should work.

fn available_Int(_ a: Int) {}
fn available_DateFormatter(_ a: DateFormatter) {}


// Some traditional Objective-C types should fail with fixits.

fn unavailable_id(_ a: id) {} // expected-error {{'id' is unavailable in Codira: 'id' is not available in Codira; use 'Any'}}
fn unavailable_Class(_ a: Class) {} // expected-error {{cannot find type 'Class' in scope; did you mean to use 'AnyClass'?}} {{29-34=AnyClass}}
fn unavailable_BOOL(_ a: BOOL) {} // expected-error {{cannot find type 'BOOL' in scope; did you mean to use 'ObjCBool'?}} {{28-32=ObjCBool}}
fn unavailable_SEL(_ a: SEL) {} // expected-error {{cannot find type 'SEL' in scope; did you mean to use 'Selector'?}} {{27-30=Selector}}
fn unavailable_NSUInteger(_ a: NSUInteger) {} // expected-error {{cannot find type 'NSUInteger' in scope; did you mean to use 'Int'?}} {{34-44=Int}} expected-note {{did you mean to use 'UInt'?}} {{34-44=UInt}}
